cambio-modal-registro-2

--- a/templates/service/service_card.html
+++ b/templates/service/service_card.html
@@ -6,7 +6,7 @@
             <img class="mr-3 rounded-circle" src="{{ service.person.picture.url }}" alt="@{{ service.user.name }}" width="50" height="50">
         </a>
         {% else %}
-        <a href="" class="data-user" name="ver el perfil del usuario"  data-toggle="modal" data-target="#modal-registration">
+        <a href="" class="data-user" name="ver el perfil de los usuarios"  data-toggle="modal" data-target="#modal-registration">
             <img class="mr-3 rounded-circle" src="{{ service.person.picture.url }}" alt="@{{ service.user.name }}" width="50" height="50">
         </a>
         {% endif %}
@@ -16,7 +16,7 @@
                 <h5 class="mt-0">@{{service.user.username}}</h5>
             </a>
             {% else %}
-            <a href="" class="data-user" name="ver el perfil del usuario"  data-toggle="modal" data-target="#modal-registration">
+            <a href="" class="data-user" name="ver el perfil de los usuarios"  data-toggle="modal" data-target="#modal-registration">
                 <h5 class="mt-0">@{{service.user.username}}</h5>
             </a>
             {% endif %}
