--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -15,7 +15,7 @@
           <a class="nav-link" href="{% url 'list' %}">Publicaciones</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link data-user" href="" name="publicar" data-toggle="modal" data-target="#modal-registration">Publicar</a>
+          <a class="nav-link data-user" href="" name="publicar tus servicios" data-toggle="modal" data-target="#modal-registration">Publicar</a>
         </li>
         <img class="d-none d-md-block d-lg-block" src="{% static 'img/anunciar.png' %}" alt="" width="35" height="35">
         {% endif %}
