--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -30,6 +30,7 @@
   <script src="{% static 'js/jquery.min.js' %}"></script>
   <script src="{% static 'js/popper.js' %}"></script>
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'js/canvas.js' %}"></script>
   <script>
       //liked
       $('body').on('click', '.like',function(event){
