--- a/templates/advertising/max_pub_2.html
+++ b/templates/advertising/max_pub_2.html
@@ -4,6 +4,7 @@
         <li data-target="#carousel-sm-1" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-sm-1" data-slide-to="1"></li>
         <li data-target="#carousel-sm-1" data-slide-to="2"></li>
+        <li data-target="#carousel-sm-1" data-slide-to="3"></li>
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
@@ -13,7 +14,10 @@
             <img class="d-block w-100" src="{% static 'img/pub-2.jpg' %}" alt="Second slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'img/publicidad.png' %}" alt="Third slide">
+            <img class="d-block w-100" src="{% static 'img/pub-3.jpg' %}" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'img/pub-4.jpg' %}" alt="Third slide">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carousel-sm-1" role="button" data-slide="prev">
