--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -124,6 +124,10 @@
         valor_data = $(this).attr("name");
         $("#data-registration").html("¡Debes registrarte para "+valor_data+"!");
       });
+
+      $('.carousel').carousel({
+            interval: 2500
+        });
   </script>
 </body>
 </html>
