--- a/templates/advertising/max_pub_2.html
+++ b/templates/advertising/max_pub_2.html
@@ -8,6 +8,9 @@
         <li data-target="#carousel-sm-1" data-slide-to="4"></li>
         <li data-target="#carousel-sm-1" data-slide-to="5"></li>
         <li data-target="#carousel-sm-1" data-slide-to="6"></li>
+        <li data-target="#carousel-sm-1" data-slide-to="7"></li>
+        <li data-target="#carousel-sm-1" data-slide-to="8"></li>
+        <li data-target="#carousel-sm-1" data-slide-to="9"></li>
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
@@ -30,6 +33,15 @@
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="{% static 'img/pub-7.jpg' %}" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'img/pub-8.jpg' %}" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'img/pub-9.jpg' %}" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'img/pub-10.jpg' %}" alt="Third slide">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carousel-sm-1" role="button" data-slide="prev">
