--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -126,8 +126,11 @@
       });
 
       $('.carousel').carousel({
-            interval: 2500
+            interval: 2500,
         });
+
+
+
   </script>
 </body>
 </html>
