--- a/templates/advertising/max_pub_2.html
+++ b/templates/advertising/max_pub_2.html
@@ -11,6 +11,10 @@
         <li data-target="#carousel-sm-1" data-slide-to="7"></li>
         <li data-target="#carousel-sm-1" data-slide-to="8"></li>
         <li data-target="#carousel-sm-1" data-slide-to="9"></li>
+        <li data-target="#carousel-sm-1" data-slide-to="10"></li>
+        <li data-target="#carousel-sm-1" data-slide-to="11"></li>
+        <li data-target="#carousel-sm-1" data-slide-to="12"></li>
+        <li data-target="#carousel-sm-1" data-slide-to="13"></li>
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
@@ -42,6 +46,18 @@
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="{% static 'img/pub-10.jpg' %}" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'img/pub-12.jpg' %}" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'img/pub-13.jpg' %}" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'img/pub-14.jpg' %}" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'img/pub-15.jpg' %}" alt="Third slide">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carousel-sm-1" role="button" data-slide="prev">
