--- a/templates/advertising/min_pub.html
+++ b/templates/advertising/min_pub.html
@@ -4,16 +4,20 @@
         <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselIndicators" data-slide-to="1"></li>
         <li data-target="#carouselIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselIndicators" data-slide-to="3"></li>
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="{% static 'img/publicidad.png' %}" alt="First slide">
+            <img class="d-block w-100" src="{% static 'img/pub-12.jpg' %}" alt="First slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'img/publicidad.png' %}" alt="Second slide">
+            <img class="d-block w-100" src="{% static 'img/pub-13.jpg' %}" alt="Second slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'img/publicidad.png' %}" alt="Third slide">
+            <img class="d-block w-100" src="{% static 'img/pub-14.jpg' %}" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'img/pub-15.jpg' %}" alt="Third slide">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
