--- a/templates/advertising/max_pub_2.html
+++ b/templates/advertising/max_pub_2.html
@@ -15,6 +15,8 @@
         <li data-target="#carousel-sm-1" data-slide-to="11"></li>
         <li data-target="#carousel-sm-1" data-slide-to="12"></li>
         <li data-target="#carousel-sm-1" data-slide-to="13"></li>
+        <li data-target="#carousel-sm-1" data-slide-to="14"></li>
+
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
@@ -58,6 +60,9 @@
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="{% static 'img/pub-15.jpg' %}" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'img/pub-16.jpg' %}" alt="Third slide">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carousel-sm-1" role="button" data-slide="prev">
