--- a/templates/advertising/min_pub.html
+++ b/templates/advertising/min_pub.html
@@ -5,6 +5,7 @@
         <li data-target="#carouselIndicators" data-slide-to="1"></li>
         <li data-target="#carouselIndicators" data-slide-to="2"></li>
         <li data-target="#carouselIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselIndicators" data-slide-to="4"></li>
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
@@ -18,6 +19,9 @@
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="{% static 'img/pub-15.jpg' %}" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'img/pub-16.jpg' %}" alt="Third slide">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
