--- a/templates/user/sign_up.html
+++ b/templates/user/sign_up.html
@@ -32,7 +32,12 @@
                 <div class="form-label-group pt-2">
                   <label for="inputEmail">Nombre de usuario</label>
                   <input type="text" id="inputText" class="form-control" placeholder="nombre_de_usuario" required autofocus name="username">
-                  <div class="feedback text-success">Recuerda tu nombre de usuario para iniciar sesión.</div>
+                  <div class="alert alert-warning alert-dismissible fade show mt-1" role="alert">
+                    <strong>Atención!</strong>El usuario ingresado aquí, será solicitado para iniciar sesión.
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
                 </div>
               
                 <div class="form-label-group pt-2">
@@ -58,7 +63,6 @@
                 <div class="form-label-group pt-2 pb-2">
                   <label for="inputPassword">Email</label>
                   <input type="email" id="inputEmail" class="form-control" placeholder="Email" required name="email">
-                  <div class="feedback text-success">Lo necesitarás para recuperar tu contraseña.</div>
                 </div>
               
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Regístrate</button> 
