--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,6 +6,7 @@
     url('/static/img/work.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: top center;
 }
 
 .color-expand:hover{
@@ -30,7 +31,7 @@
 .target{
     background-color: rgb(255, 255, 255);
     border-width: 10em;
-    border-radius: 0.5em;
+    border-radius: 0em;
     box-shadow: 2px 2px 10px #666
 }
 
