--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -8,85 +8,71 @@
 {% block content %}
 
 <div class="container-fluid work">
-  <div class="row justify-content-md-center" style="height: 650px;">
-    <div class="container" style="height: 100%;">
-      <h2 class="mt-5 mb-4 font-weight-bolder text-light text-center">Publica y busca servicios en nuestra plataforma</h2>
+  <div class="row justify-content-md-center" style="height: 350px;">
+    <div class="container">
+      
       <div class="row">
         <div class="col-lg-6 mt-2 col-sm-12">
-          <h5 class="text-light mb-3 mt-3 font-italic ">
+          <h2 class="mt-2 mt-lg-4 mb-4 text-light text-center"></h2>
+          <h4 class="text-light mb-3 font-italic ">
             ¡Encuentra clientes que te requieran de una manera sencilla y totalmente gratis! 
             ¡Si tenés un oficio o quieres promocionar tus productos, podés publicarlo en este espacio diseñado para vos!
-          </h5>
-          <h5 class="text-light font-italic">
+          </h4>
+          <h4 class="text-light font-italic">
             ¿Necesitas emplear un servicio y no sabes dónde buscar? 
             ¡Aquí encontrarás a los mejores por categoría!
-          </h5>
+          </h4>
         </div>
-        <div class="col-lg-4 mt-sm-1 ml-lg-4 col-sm-12">
-          <img src="{% static 'img/perfil.png' %}" alt="" width="350" height="auto" style="border-radius: 15px;">
+        <div class="col-lg-6 mt-4 d-none d-lg-block">
+          <div class="row justify-content-center">
+            <div class="col-8 text-light">
+              <form class="form-signin" method="POST" action="{%url 'log_in'%}">
+                {% csrf_token %}
+                    <div class="form-label-group pt-2">
+                      <label for="inputEmail">Nombre de Usuario</label>
+                      <input type="text" id="inputEmail" class="form-control" placeholder="Usuario" required autofocus name="username">
+                    </div>
+                  
+                    <div class="form-label-group pt-2 pb-2">
+                      <label for="inputPassword">Contraseña</label>
+                      <input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required name="password">
+                    </div>
+                  
+                    <div class="checkbox">
+                      <label>
+                        <p class="pt-2"><a class="text-light" href="{% url 'password_reset' %}">He olvidado mi contraseña y nombre de usuario</a></p>
+                      </label>
+                    </div>
+                    <button class="btn btn-lg btn-outline-secondary btn-block" type="submit">Ingresar</button>
+                
+                  </form>
+                  <div class="pt-4">
+                    <a class="text-light" href="{% url 'sign_up' %}">¿Todavía no tienes una cuenta? Regístrate ahora.</a>
+                  </div>
+            </div>
+          </div>
         </div>
+
       </div>
     </div>
   </div>
 </div>
-<div class="container">
-  <div class="row pt-3 pb-3 mt-4 mb-4">
-    <div class="col-lg-4 mt-2 mb-2">
-      <h5 class='text-dark'>
-        <img src="{% static 'img/entrar.png' %}" alt="" width="40" height="auto" class="mr-2"> Registrarse es fácil, 
-        sólo necesitas un alias, tu email y tu nombre y apellido. 
-        Una vez registrado ingresa con el nombre de usuario que elegiste y tu contraseña.
-      </h5>
-    </div>
-    <div class="col-lg-4 mt-2 mb-2">
-      <h5 class='text-dark'>
-        <img src="{% static 'img/service.png' %}" alt="" width="40" height="auto" class="mr-2"> Es importante que detalles lo que ofreces 
-        para que los demás usuarios puedan encontrarte rápidamente, 
-        además mostrar lo que haces con una foto es mucho mejor.
-      </h5>
-    </div>
-    <div class="col-lg-4 mt-2 mb-2">
-      <h5 class='text-dark'>
-        <img src="{% static 'img/star.png' %}" alt="" width="40" height="auto" class="mr-2"> Si conoces y contrataste algunos de estos servicios, 
-        podés clasificarlos con las estrellas, es importante para el usuario que lo ofrece y para recomendarlo a los demás.
-      </h5>
-    </div>
-  </div>
-</div>
-<div class="container-fluid">
+
+
+<section>
   <hr>
-  <div class="row justify-content-center">
-    <h3 class="font-italic text-dark mt-2 ml-lg-4">Elegí lo mejor de siempre en Tinogasta</h3>
-    <div class="col-12 pt-2 mt-4">
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="{% static 'img/pub-slider.jpg' %}" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="{% static 'img/pub-slider.jpg' %}" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="{% static 'img/pub-slider.jpg' %}" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </div>
+  <div class="text-center m-4">
+    <h3>Ultimas Publicaciones</h3>
   </div>
+  <div id="list-index" class="row justify-content-center">
+
+  </div>
+</section>
+
+<div class="text-center pt-3">
+  <a href="{% url 'list' %}" class="btn btn-primary">Ver más Publicaciones</a>
 </div>
+
 <div class="container-fluid" style="background-color: rgb(17, 134, 163);">
 <div class="row mt-5 pt-5 pb-5">
   <div class="col-lg-4 col-sm-12 text-center mb-2 mt-2">
@@ -100,7 +86,7 @@
   <div class="col-lg-4 col-sm-12 text-center mb-2 mt-2">
     <h3 style="color: white;">Contacto</h3>
     <form class="form-block pt-2 pb-2" action="">
-      <a class="btn btn-outline-secondary m-2"  href="{% url 'contact' %}">Tu Publicidad en TRATO HECHO</a>
+      <a class="btn btn-outline-secondary m-2"  href="{% url 'contact' %}">Envianos un mensaje</a>
     </form>
   </div>
 </div>
@@ -124,3 +110,73 @@
   </div>
 </footer>
 {% endblock %}
+
+
+{% block js %}
+  <script>
+      $(document).ready(function() {
+        $(".img-aparece").fadeIn(2000);
+
+        $.ajax({
+          type:"get",
+          url: "{% url 'list_index' %}",
+          data: $(this).serialize(),
+          dataType: "json",
+          cache:false,
+          success: function(response){
+            var html;
+            var url_facebook = "{% static 'img/facebook.png' %}";
+            var sitio = "{% static 'img/sitio.png'%}";
+            var estrella = "{% static 'img/estrella.png' %}";
+            var eliminar = "{% static 'img/eliminar.png' %}";
+            
+            $.each(response, function(index,element){
+              if (element.user == element.request_user) {
+                var elim = '<a type="button" class="mb-3 float-right ml-3 eliminar" name="'+element.id+'"><img src="'+eliminar+'" alt="" width="30" height="30" class="color-expand"></a>';
+              }else{
+                elim = "";
+              };
+              if (element.facebook_url != null) {
+                facebook = '<a href="'+element.facebook_url+'"  class="mb-3 float-right"><img src="'+url_facebook+'" alt="" width="30" height="30" class="color-expand"><a/>';
+              }else{
+                facebook = "";
+              };
+              if (element.direction != null) {
+                directions = '<img src="'+sitio+'" alt="" width="20" height="20" class=" mr-2"><p class="mt-0 mb-1 text-secondary">'+element.direction+'</p></form>';
+              }else{
+                directions = '<img src="'+sitio+'" alt="" width="20" height="20" class="d-none mr-2"><p class="mt-0 mb-1 text-secondary"></p></form>';
+              };
+              
+              html = '<div class="target col-lg-3 col-md-3 col-sm-12 p-3 m-2 none'+element.id+'" style="max-width: 20rem;">',
+              html += '<div class="media">';
+              html +='<img class="mr-3 rounded-circle" src="'+element.picture+'" alt="'+element.user+'" width="50" height="50">',
+              html +='<div class="media-body">',
+              html +='<h5 class="mt-0">@'+element.user+'</h5>',
+              html +='<h6 class="ml-0 mt-1">'+element.title+'</h6></div>',
+              html += facebook,
+              html +='</div>',
+              html +='<img class="img-fluid mt-3 border rounded" src="'+element.picture_logo+'" alt="'+element.title+'">',
+              html +='<p><span class="badge badge-primary">'+element.category+'</span></p>',
+              html +='<p class="mt-1 mb-0 text-primary">'+element.description+'</p>',
+              html +=' <form class="form-inline">',
+              html +=directions,
+              html +='<span class="badge ml-0 mt-0">'+element.created+'</span>',
+              html +='<div class="mt-0 mb-3">',
+              html +='',
+              html +='',
+              html +='</div>',
+              html +='</div>',
+              html +='</div>';
+              
+                        
+              $("#list-index").append(html);
+            })//end each
+            
+            
+          }//end success
+      });//end ajax
+
+      });
+  </script>
+{% endblock js %}
+  
