--- a/templates/advertising/max_pub_2.html
+++ b/templates/advertising/max_pub_2.html
@@ -16,6 +16,7 @@
         <li data-target="#carousel-sm-1" data-slide-to="12"></li>
         <li data-target="#carousel-sm-1" data-slide-to="13"></li>
         <li data-target="#carousel-sm-1" data-slide-to="14"></li>
+        <li data-target="#carousel-sm-1" data-slide-to="15"></li>
 
     </ol>
     <div class="carousel-inner">
@@ -48,6 +49,9 @@
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="{% static 'img/pub-10.jpg' %}" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'img/pub-11.jpg' %}" alt="Third slide">
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="{% static 'img/pub-12.jpg' %}" alt="Third slide">
