--- a/templates/advertising/min_pub.html
+++ b/templates/advertising/min_pub.html
@@ -6,22 +6,26 @@
         <li data-target="#carouselIndicators" data-slide-to="2"></li>
         <li data-target="#carouselIndicators" data-slide-to="3"></li>
         <li data-target="#carouselIndicators" data-slide-to="4"></li>
+        <li data-target="#carouselIndicators" data-slide-to="5"></li>
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="{% static 'img/pub-12.jpg' %}" alt="First slide">
+            <img class="d-block w-100" src="{% static 'img/pub-11.jpg' %}" alt="">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'img/pub-13.jpg' %}" alt="Second slide">
+            <img class="d-block w-100" src="{% static 'img/pub-12.jpg' %}" alt="">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'img/pub-14.jpg' %}" alt="Third slide">
+            <img class="d-block w-100" src="{% static 'img/pub-13.jpg' %}" alt="">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'img/pub-15.jpg' %}" alt="Third slide">
+            <img class="d-block w-100" src="{% static 'img/pub-14.jpg' %}" alt="">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'img/pub-16.jpg' %}" alt="Third slide">
+            <img class="d-block w-100" src="{% static 'img/pub-15.jpg' %}" alt="">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'img/pub-16.jpg' %}" alt="">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
