--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -37,7 +37,7 @@
               <a class="dropdown-item" href="{% url 'search_category' 'Hogar y Jardin'%}">Hogar y Jardin</a>
               <a class="dropdown-item" href="{% url 'search_category' 'Industria y Agricultura'%}">Industria y Agricultura</a>
               <a class="dropdown-item" href="{% url 'search_category' 'Medios de Comunicación'%}">Medios de Comunicación</a>
-              <a class="dropdown-item" href="{% url 'search_category' 'Servicios Profecionales'%}">Servicios Profesionales</a>
+              <a class="dropdown-item" href="{% url 'search_category' 'Servicios Profesionales'%}">Servicios Profesionales</a>
               <a class="dropdown-item" href="{% url 'search_category' 'Ropa y Accesorios'%}">Ropa y Accesorios</a>
               <a class="dropdown-item" href="{% url 'search_category' 'Salud y Medicina'%}">Salud y Medicina</a>
               <a class="dropdown-item" href="{% url 'search_category' 'Servicios Legales y Financieros'%}">Servicios Legales y Financieros</a>
