--- a/templates/service/image_modal.html
+++ b/templates/service/image_modal.html
@@ -3,13 +3,17 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="{{service.user.username}}">@{{service.user.username}} | {{service.title}}</h5>
+          <h5 class="modal-title" id="{{service.user.username}}">@{{service.user.username}}</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-            <img class="img-fluid border rounded" src="{{ service.picture_logo.url }}" alt="{{ service.title }}" style="width: 100%; height: auto;">
+          
+          {% if service.picture_logo %}
+          <img class="img-fluid border rounded" src="{{ service.picture_logo.url }}" alt="{{ service.title }}" style="width: 100%; height: auto;">
+          {% endif %}
+            
         </div>
       </div>
     </div>
