--- a/templates/service/new.html
+++ b/templates/service/new.html
@@ -10,88 +10,90 @@
         <div class="row justify-content-md-center">
             <div class="col-lg-6 col-md-6 col-sm-12 pt-3 pb-3 mt-5 target">
                 <h4 class="mb-4">Publica tu servicio</h4>
-
-                <form method="POST" enctype="multipart/form-data">
-                    {% csrf_token %}
-
-                    <input type="hidden" name="user" value="{{ user.pk}}" />
-                    <input type="hidden" name="person" value="{{ person.pk }}" />
-
-                    {# Title field #}
-                    <div class="form-group">
-                        <input
-                            class="form-control {% if form.title.errors %}is-invalid{% endif %}"
-                            type="text"
-                            name="title"
-                            placeholder="Título del servicio"
-                        >
-                        <div class="invalid-feedback">
-                            {% for error in form.title.errors %}{{ error }}{% endfor %}
+                <div>
+                    <form method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        
+                        <input type="hidden" name="user" value="{{ user.pk}}" />
+                        <input type="hidden" name="person" value="{{ person.pk }}" />
+    
+                        {# Category field #}
+                        <div class="form-group">
+                            {{form.category}}
                         </div>
-                    </div>
-
-                    {# Category field #}
-                    <div class="form-group">
-                        {{form.category}}
-                    </div>
-
-                    {# Description field #}
-                    <div class="form-group">
-                        <input
-                            class="form-control {% if form.description.errors %}is-invalid{% endif %}"
-                            type="text"
-                            name="description"
-                            placeholder="Describe tu servicio"
-                        >
-                        <div class="invalid-feedback">
-                            {% for error in form.description.errors %}{{ error }}{% endfor %}
+    
+                        {# Description field #}
+                        <div class="form-group">
+                            <textarea
+                                class="form-control {% if form.description.errors %}is-invalid{% endif %}"
+                                type="text"
+                                name="description"
+                                rows="3"
+                                placeholder="Describe tu servicio no es obligatorio subir imagenes"
+                            ></textarea>
+                            <div class="invalid-feedback">
+                                {% for error in form.description.errors %}{{ error }}{% endfor %}
+                            </div>
                         </div>
-                    </div>
-                    
-                    {# Direction field #}
-                    <div class="form-group">
-                        <input
-                            class="form-control {% if form.direction.errors %}is-invalid{% endif %}"
-                            type="text"
-                            name="direction"
-                            placeholder="Dirección comercial"
-                        >
-                        <div class="invalid-feedback">
-                            {% for error in form.direction.errors %}{{ error }}{% endfor %}
+                        
+                        {# Direction field #}
+                        <div class="form-group">
+                            <input
+                                class="form-control {% if form.direction.errors %}is-invalid{% endif %}"
+                                type="text"
+                                name="direction"
+                                placeholder="Dirección comercial (opcional)"
+                            >
+                            <div class="invalid-feedback">
+                                {% for error in form.direction.errors %}{{ error }}{% endfor %}
+                            </div>
                         </div>
-                    </div>
-
-                    {# Facebook_Url field #}
-                    <div class="form-group">
-                        <input
-                            class="form-control {% if form.facebook_url.errors %}is-invalid{% endif %}"
-                            type="url"
-                            name="facebook_url"
-                            placeholder="URL de Facebook"
-                        >
-                        <div class="invalid-feedback">
-                            {% for error in form.facebook_url.errors %}{{ error }}{% endfor %}
+    
+                        {# Facebook_Url field #}
+                        <div class="form-group">
+                            <input
+                                class="form-control {% if form.facebook_url.errors %}is-invalid{% endif %}"
+                                type="url"
+                                name="facebook_url"
+                                placeholder="URL de Facebook (opcional)"
+                            >
+                            <div class="invalid-feedback">
+                                {% for error in form.facebook_url.errors %}{{ error }}{% endfor %}
+                            </div>
                         </div>
-                    </div>
-
-                    {# Photo field #}
-                    <div class="form-group">
-                        <label>Elige una Foto:</label>
-                        <input
-                            class="form-control {% if form.picture_logo.errors %}is-invalid{% endif %}"
-                            type="file"
-                            name="picture_logo"
-                            placeholder="Foto"
-                        >
-                        <div class="invalid-feedback">
-                            {% for error in form.picture_logo.errors %}{{ error }}{% endfor %}
+                        <div class="col d-inline">
+                            <div class="mb-4">
+                                <a onclick="addInput()" class="btn btn-success">Agregar imagen</a>
+                            </div>
+                            <div id="formServiceContent" class="row m-1">
+                                {{formset.as_p}}
+                            </div>
                         </div>
-                    </div>
-
-                    <button type="submit" class="btn btn-primary btn-block mt-5">Publicar!</button>
-                </form>
+                        <button type="submit" class="btn btn-primary btn-block mt-1">Publicar!</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
 
 {% endblock %}
+
+
+{% block js %}
+<script>
+    function addInput() {
+        var forms = document.querySelector('#id_form-TOTAL_FORMS')
+        //var newinput = '<input type="text" id="form-'+forms.value+'-image name="form-'+forms.value+'-image">';
+        var newinput = document.querySelector('#id_form-0-image').cloneNode(true);
+
+        newinput.name = 'form-'+forms.value+'-image';
+        newinput.id = 'id_form-'+forms.value+'-image';
+        newinput.classList.add("mb-3");
+        document.querySelector('#formServiceContent').appendChild(newinput);
+        forms.value = parseInt(forms.value) +1;
+        console.log(forms.value)
+
+    }
+</script>
+{% endblock js %}
+    
