--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -84,7 +84,8 @@
     <img class="mr-2" src="{% static 'img/muni.png' %}" alt="" style="width: 100px; height: auto;">
   </div>
   <div class="col-lg-4 col-sm-12 text-center mb-2 mt-2">
-    <h3 style="color: white;">Contacto</h3>
+    <h3 style="color: white;">Secretaría de Desarrollo Social</h3>
+    <img class="mr-2" src="{% static 'img/desarrollo-social.png' %}" alt="" style="width: 100px; height: auto;">
     <form class="form-block pt-2 pb-2" action="">
       <a class="btn btn-outline-secondary m-2"  href="{% url 'contact' %}">Envianos un mensaje</a>
     </form>
