--- a/templates/service/list_service.html
+++ b/templates/service/list_service.html
@@ -26,11 +26,11 @@
                 <p class="mt-2 mb-2 text-muted text-center">&copy; Municipalidad de Tinogasta <script>document.write(new Date().getFullYear());</script></p>
             </div>
 
-            <div class="media d-sm-none d-md-none d-lg-block" style="position: fixed; right: 100px; width: 25%; height: auto;">
+            <div class="media d-none d-lg-block" style="position: fixed; right: 100px; width: 25%; height: auto;">
                 <div class="media-body">
                     {% include 'advertising/max_pub_2.html' %}
                 </div>
-                <div class="media-body text-center pt-3">
+                <div class="media-body text-center pt-3 d-none d-lg-block d-md-block">
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
