--- a/templates/service/service_card.html
+++ b/templates/service/service_card.html
@@ -3,7 +3,7 @@
     <div class="media">
         {%if request.user.is_authenticated %}
         <a href="{% url 'detail' service.user.username %}">
-            <img class="mr-3 rounded-circle" src="{{ service.person.picture.url }}" alt="@{{ service.user.name }}" width="50" height="50">
+            <img class="mr-3 rounded-circle" src="{{ service.person.picture.url }}" alt="@{{ service.user.name }}" width="50" height="50" style="object-fit: cover;">
         </a>
         {% else %}
         <a href="" class="data-user" name="ver el perfil de los usuarios"  data-toggle="modal" data-target="#modal-registration">
